// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`error queries fetches a single error group 1`] = `
Object {
  "apm": Object {
    "events": Array [
      "error",
    ],
  },
  "body": Object {
    "query": Object {
      "bool": Object {
        "filter": Array [
          Object {
            "term": Object {
              "service.name": "serviceName",
            },
          },
          Object {
            "term": Object {
              "error.grouping_key": "groupId",
            },
          },
          Object {
            "range": Object {
              "@timestamp": Object {
                "format": "epoch_millis",
                "gte": 0,
                "lte": 50000,
              },
            },
          },
        ],
        "should": Array [
          Object {
            "term": Object {
              "transaction.sampled": true,
            },
          },
        ],
      },
    },
    "size": 1,
    "sort": Array [
      Object {
        "_score": Object {
          "order": "desc",
        },
      },
      Object {
        "@timestamp": Object {
          "order": "desc",
        },
      },
    ],
  },
}
`;

exports[`error queries fetches multiple error groups 1`] = `
Object {
  "apm": Object {
    "events": Array [
      "error",
    ],
  },
  "body": Object {
    "aggs": Object {
      "error_groups": Object {
        "aggs": Object {
          "sample": Object {
            "top_hits": Object {
              "_source": Array [
                "error.log.message",
                "error.exception.message",
                "error.exception.handled",
                "error.exception.type",
                "error.culprit",
                "error.grouping_key",
                "@timestamp",
              ],
              "size": 1,
              "sort": Object {
                "@timestamp": "desc",
              },
            },
          },
        },
        "terms": Object {
          "field": "error.grouping_key",
          "order": Object {
            "_count": "asc",
          },
          "size": 500,
        },
      },
    },
    "query": Object {
      "bool": Object {
        "filter": Array [
          Object {
            "term": Object {
              "service.name": "serviceName",
            },
          },
          Object {
            "range": Object {
              "@timestamp": Object {
                "format": "epoch_millis",
                "gte": 0,
                "lte": 50000,
              },
            },
          },
        ],
      },
    },
    "size": 0,
  },
}
`;

exports[`error queries fetches multiple error groups when sortField = lastSeen 1`] = `
Object {
  "apm": Object {
    "events": Array [
      "error",
    ],
  },
  "body": Object {
    "aggs": Object {
      "error_groups": Object {
        "aggs": Object {
          "max_timestamp": Object {
            "max": Object {
              "field": "@timestamp",
            },
          },
          "sample": Object {
            "top_hits": Object {
              "_source": Array [
                "error.log.message",
                "error.exception.message",
                "error.exception.handled",
                "error.exception.type",
                "error.culprit",
                "error.grouping_key",
                "@timestamp",
              ],
              "size": 1,
              "sort": Object {
                "@timestamp": "desc",
              },
            },
          },
        },
        "terms": Object {
          "field": "error.grouping_key",
          "order": Object {
            "max_timestamp": "asc",
          },
          "size": 500,
        },
      },
    },
    "query": Object {
      "bool": Object {
        "filter": Array [
          Object {
            "term": Object {
              "service.name": "serviceName",
            },
          },
          Object {
            "range": Object {
              "@timestamp": Object {
                "format": "epoch_millis",
                "gte": 0,
                "lte": 50000,
              },
            },
          },
        ],
      },
    },
    "size": 0,
  },
}
`;
